move to JDK17 (#2827)
* move to JDK17

* Update pom.xml

Co-authored-by: otbutz <tbutz@optitool.de>

* simplify cleanMappedByteBuffer

---------

Co-authored-by: otbutz <tbutz@optitool.de>