@@ -17,7 +17,6 @@
  */
 package com.graphhopper.storage;
 
-import com.graphhopper.util.Constants;
 import com.graphhopper.util.Helper;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -56,8 +55,6 @@ import java.util.StringTokenizer;
  */
 public final class MMapDataAccess extends AbstractDataAccess {
 
-    private static final Logger LOGGER = LoggerFactory.getLogger(MMapDataAccess.class);
-
     private final boolean allowWrites;
     private RandomAccessFile raFile;
     private final List<MappedByteBuffer> segments = new ArrayList<>();
@@ -67,74 +64,25 @@ public final class MMapDataAccess extends AbstractDataAccess {
         this.allowWrites = allowWrites;
     }
 
-    public static boolean jreIsMinimumJava9() {
-        final StringTokenizer st = new StringTokenizer(System.getProperty("java.specification.version"), ".");
-        int JVM_MAJOR_VERSION = Integer.parseInt(st.nextToken());
-        int JVM_MINOR_VERSION;
-        if (st.hasMoreTokens()) {
-            JVM_MINOR_VERSION = Integer.parseInt(st.nextToken());
-        } else {
-            JVM_MINOR_VERSION = 0;
-        }
-        return JVM_MAJOR_VERSION > 1 || (JVM_MAJOR_VERSION == 1 && JVM_MINOR_VERSION >= 9);
-    }
-
     public static void cleanMappedByteBuffer(final ByteBuffer buffer) {
         // TODO avoid reflection on every call
         try {
             AccessController.doPrivileged(new PrivilegedExceptionAction<Object>() {
                 @Override
                 public Object run() throws Exception {
-                    if (jreIsMinimumJava9()) {
-                        // >=JDK9 class sun.misc.Unsafe { void invokeCleaner(ByteBuffer buf) }
-                        final Class<?> unsafeClass = Class.forName("sun.misc.Unsafe");
-                        // fetch the unsafe instance and bind it to the virtual MethodHandle
-                        final Field f = unsafeClass.getDeclaredField("theUnsafe");
-                        f.setAccessible(true);
-                        final Object theUnsafe = f.get(null);
-                        final Method method = unsafeClass.getDeclaredMethod("invokeCleaner", ByteBuffer.class);
-                        try {
-                            method.invoke(theUnsafe, buffer);
-                            return null;
-                        } catch (Throwable t) {
-                            throw new RuntimeException(t);
-                        }
+                    // >=JDK9 class sun.misc.Unsafe { void invokeCleaner(ByteBuffer buf) }
+                    final Class<?> unsafeClass = Class.forName("sun.misc.Unsafe");
+                    // fetch the unsafe instance and bind it to the virtual MethodHandle
+                    final Field f = unsafeClass.getDeclaredField("theUnsafe");
+                    f.setAccessible(true);
+                    final Object theUnsafe = f.get(null);
+                    final Method method = unsafeClass.getDeclaredMethod("invokeCleaner", ByteBuffer.class);
+                    try {
+                        method.invoke(theUnsafe, buffer);
+                        return null;
+                    } catch (Throwable t) {
+                        throw new RuntimeException(t);
                     }
-
-                    if (buffer.getClass().getSimpleName().equals("MappedByteBufferAdapter")) {
-                        if (!Constants.ANDROID)
-                            throw new RuntimeException("MappedByteBufferAdapter only supported for Android at the moment");
-
-                        // For Android 4.1 call ((MappedByteBufferAdapter)buffer).free() see #914
-                        Class<?> directByteBufferClass = Class.forName("java.nio.MappedByteBufferAdapter");
-                        callBufferFree(buffer, directByteBufferClass);
-                    } else {
-                        // <=JDK8 class DirectByteBuffer { sun.misc.Cleaner cleaner(Buffer buf) }
-                        //        then call sun.misc.Cleaner.clean
-                        final Class<?> directByteBufferClass = Class.forName("java.nio.DirectByteBuffer");
-                        try {
-                            final Method dbbCleanerMethod = directByteBufferClass.getMethod("cleaner");
-                            dbbCleanerMethod.setAccessible(true);
-                            // call: cleaner = ((DirectByteBuffer)buffer).cleaner()
-                            final Object cleaner = dbbCleanerMethod.invoke(buffer);
-                            if (cleaner != null) {
-                                final Class<?> cleanerMethodReturnType = dbbCleanerMethod.getReturnType();
-                                final Method cleanMethod = cleanerMethodReturnType.getDeclaredMethod("clean");
-                                cleanMethod.setAccessible(true);
-                                // call: ((sun.misc.Cleaner)cleaner).clean()
-                                cleanMethod.invoke(cleaner);
-                            }
-                        } catch (NoSuchMethodException ex2) {
-                            if (Constants.ANDROID)
-                                // For Android 5.1.1 call ((DirectByteBuffer)buffer).free() see #933
-                                callBufferFree(buffer, directByteBufferClass);
-                            else
-                                // ignore if method cleaner or clean is not available
-                                LOGGER.warn("NoSuchMethodException | " + System.getProperty("java.version"), ex2);
-                        }
-                    }
-
-                    return null;
                 }
             });
         } catch (PrivilegedActionException e) {
@@ -142,21 +90,9 @@ public final class MMapDataAccess extends AbstractDataAccess {
         }
     }
 
-    private static void callBufferFree(ByteBuffer buffer, Class<?> directByteBufferClass)
-            throws InvocationTargetException, IllegalAccessException {
-        try {
-            final Method dbbFreeMethod = directByteBufferClass.getMethod("free");
-            dbbFreeMethod.setAccessible(true);
-            dbbFreeMethod.invoke(buffer);
-        } catch (NoSuchMethodException ex2) {
-            LOGGER.warn("NoSuchMethodException | " + System.getProperty("java.version"), ex2);
-        }
-    }
-
     private void initRandomAccessFile() {
-        if (raFile != null) {
+        if (raFile != null)
             return;
-        }
 
         try {
             // raFile necessary for loadExisting and create
